[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Scripts/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/WhiteOutlines-3mGp.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icons/black_icons/menu.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/black_icons/right-arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/woow.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/Scenes/GlobalBg.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 73
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 4 )

[node name="WinScreen" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="BackgroundControl" parent="." instance=ExtResource( 8 )]

[node name="Level" type="RichTextLabel" parent="."]
margin_left = 256.0
margin_top = 48.0
margin_right = 512.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "Level 5"
scroll_active = false

[node name="Time" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 183.0
margin_right = 288.0
margin_bottom = 327.0
custom_fonts/normal_font = SubResource( 2 )
text = "Tempo
100 "
scroll_active = false

[node name="Moves" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 384.0
margin_right = 352.0
margin_bottom = 576.0
custom_fonts/normal_font = SubResource( 3 )
text = "Jogadas
100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_top = 624.0
margin_right = 140.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.996078, 0.996078, 0.996078, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="."]
margin_left = 624.0
margin_top = 624.0
margin_right = 764.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeR" type="RichTextLabel" parent="."]
margin_left = 448.0
margin_top = 183.0
margin_right = 767.0
margin_bottom = 352.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Recorde
100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesR" type="RichTextLabel" parent="."]
margin_left = 448.0
margin_top = 384.0
margin_right = 767.0
margin_bottom = 528.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Recorde
100
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]
